--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 .calculator-body {
-  margin-top:150px;
-  max-height: calc(95vh - 150px);
+  margin-top:15vh;
+  max-height: calc(95vh - 15vh);
   background-color: hsl(0, 0%, 100%);
   border-radius: 25px 25px 0 0;
   padding: 25px ;
