--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 .calculator-body {
   margin-top:15vh;
-  max-height: calc(95vh - 15vh);
+  min-height: calc(100vh - 15vh);
   background-color: hsl(0, 0%, 100%);
   border-radius: 25px 25px 0 0;
   padding: 25px ;
