--- a/style.css
+++ b/style.css
@@ -13,7 +13,35 @@ body {
   min-height: calc(100vh - 15vh);
   background-color: hsl(0, 0%, 100%);
   border-radius: 25px 25px 0 0;
-  padding: 25px ;
+  padding: 20px ;
+}
+
+.section{
+  margin:20px 0;
+}
+
+.section-header{
+  padding-bottom: 10px;
+}
+
+.tip-selection-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.tip-percentage {
+  width: 48%;
+  padding:10px 0;
+  margin: 5px 0;
+}
+
+.tip-calculations-section {
+  background-color: hsl(183, 100%, 15%);
+  color:hsl(189, 41%, 97%);
+  border-radius: 10px;
+  height: 20vh;
+  padding: 25px;
 }
 
 .attribution {
